split report includes in general and specialized parts

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -4,6 +4,7 @@
 \documentclass{scrartcl}
 
 \input{common/ros.tex}
+\input{common/ros_report.tex}
 
 \newcommand{\commerceRegistrationNumber}[0]{123456}
 \newcommand{\reportClassification}[0]{Confidential}
