--- a/latex/report.tex
+++ b/latex/report.tex
@@ -6,23 +6,14 @@
 \input{common/ros.tex}
 \input{common/ros_report.tex}
 
-\newcommand{\commerceRegistrationNumber}[0]{123456}
 \newcommand{\reportClassification}[0]{Confidential}
 \newcommand{\customer}[0]{Illuminati Inc}
 \newcommand{\target}[0]{Illuminati NOC}
 \newcommand{\reportTitle}[0]{Penetration Testing Report}
-\newcommand{\reportPlace}[0]{Amsterdam}
+\newcommand{\reportPlace}[0]{\configCompanyCity}
 \newcommand{\reportPentesters}[0]{Fredik Nord; Fridolin Ord}
-\newcommand{\reportReviewer}[0]{}
+\newcommand{\reportReviewer}[0]{Richard Review}
 \newcommand{\reportApprover}[0]{Annabelle Approve}
-
-\newcommand{\contactName}[0]{Constantin contact}
-\newcommand{\contactAddress}[0]{
-Radically Open Security BV\newline
-Overdiemerweg 28, 1111 PP Diemen}
-\newcommand{\contactPhone}[0]{ +00 11 22 33 44}
-\newcommand{\contactEmail}[0]{contact@example.com}
-
 
 \newcommand{\reportCurrentVersion}[0]{V0.1}
 \newcommand{\reportCurrentDate}[0]{November 4th, 2014}
